ipc/ipdl/test/ipdl/error/manageSelfToplevel.ipdl
protocol manageSelfToplevel {
    manager manageSelfToplevel;
    manages manageSelfToplevel;

child:
    async manageSelfToplevel();
    async __delete__();
};
